Fix Generic.Inserted colors for dark mode

--- a/assets/scss/syntax/syntax-dark.scss
+++ b/assets/scss/syntax/syntax-dark.scss
@@ -34,7 +34,7 @@
  .highlight .ge { color: #f8f8f2; text-decoration: underline } /* Generic.Emph */
  .highlight .gr { color: #f8f8f2 } /* Generic.Error */
  .highlight .gh { color: #f8f8f2; font-weight: bold } /* Generic.Heading */
- .highlight .gi { color: #f8f8f2; font-weight: bold } /* Generic.Inserted */
+ .highlight .gi { color: PaleGreen; background-color: DarkOliveGreen; } /* Generic.Inserted */
  .highlight .go { color: #44475a } /* Generic.Output */
  .highlight .gp { color: #f8f8f2 } /* Generic.Prompt */
  .highlight .gs { color: #f8f8f2 } /* Generic.Strong */
